refactoring: removing warnings

--- a/jat.cabal
+++ b/jat.cabal
@@ -35,6 +35,7 @@ executable jat
     mtl >= 2.0 && < 2.2,
     graphviz == 2999.13.*,
     fgl == 5.4.*,
+    set-monad == 0.1.*,
     text == 0.11.*
 
 --  ghc-options:
