--- a/jat.cabal
+++ b/jat.cabal
@@ -20,7 +20,7 @@ executable jat
   hs-source-dirs:
     src
   build-depends:       
-    term-rewriting == 0.0,
+    term-rewriting == 0.*,
 
     base == 4.5.*,
     containers == 0.4.*,
