--- a/jat.cabal
+++ b/jat.cabal
@@ -22,13 +22,13 @@ executable jat
   build-depends:       
     term-rewriting == 0.*,
 
-    base == 4.5.*,
-    containers == 0.4.*,
-    parsec == 3.*,
+    base == 4.*,
+    containers >= 0.5,
+    parsec >= 3.1,
+    mtl >= 2.1,
     ansi-wl-pprint == 0.6.*,
-    array == 0.4.*,
-    mtl >= 2.0 && < 2.2,
-    graphviz == 2999.13.*,
+    array >= 0.4,
+    graphviz >= 2999.16,
     fgl == 5.4.*,
     set-monad == 0.1.*,
     text == 0.11.*
