--- a/jat.cabal
+++ b/jat.cabal
@@ -1,5 +1,5 @@
 name:          jat
-version:       1.3.0
+version:       1.4.0
 stability:     experimental
 author:        Georg Moser, Michael Schaper
 maintainer:    Michael Schaper <michael.schaper@uibk.ac.at>
@@ -17,22 +17,65 @@ executable jat
     Main.hs
   hs-source-dirs:
     src
+  other-modules:
+    JFlow.Data
+    JFlow.Flow
+    JFlow.Instances
+    JFlow.PairSharing
+    JFlow.PointsTo
+    JFlow.ReachAC
+    JFlow.Typing
+    JFlow.Utility
+    Jat.CompGraph
+    Jat.Constraints
+    Jat.JatM
+    Jat.PState
+    Jat.PState.AbstrDomain
+    Jat.PState.AbstrValue
+    Jat.PState.BoolDomain
+    Jat.PState.Data
+    Jat.PState.Frame
+    Jat.PState.Fun
+    Jat.PState.Heap
+    Jat.PState.IntDomain
+    Jat.PState.IntDomain.Data
+    Jat.PState.IntDomain.SignedIntDomain
+    Jat.PState.IntDomain.SimpleIntDomain
+    Jat.PState.MemoryModel
+    Jat.PState.MemoryModel.Data
+    Jat.PState.MemoryModel.PairSharing
+    Jat.PState.MemoryModel.Primitive
+    Jat.PState.MemoryModel.UnSharing
+    Jat.PState.Object
+    Jat.PState.Semantics
+    Jat.PState.Step
+    Jat.PairSet
+    Jat.Utils.Args
+    Jat.Utils.Dot
+    Jat.Utils.Fun
+    Jat.Utils.Pretty
+    Jat.Utils.TRS
+    Jat.Utils.Version
+    Jinja.Program
+    Jinja.Program.Data
+    Jinja.Program.Fun
+    Jinja.Program.Parser
   build-depends:
-    ansi-wl-pprint == 0.6.*,
-    array          == 0.5.*,
-    base           == 4.*,
-    containers     >= 0.5 && < 0.6,
-    fgl            == 5.5.*,
-    graphviz       >= 2999.16,
-    mtl            >= 2.1 && <= 2.3,
-    parsec         == 3.1.*,
-    safe           == 0.3.*,
-    set-monad      == 0.2.*,
-    text           == 1.2.*,
+    base >= 4.7 && <5,
+    array,
+    containers,
+    mtl,
+    set-monad,
+    fgl,
+    graphviz,
+    text,
+    ansi-wl-pprint,
+    parsec,
+    term-rewriting,
+    jat
 
-    term-rewriting == 0.*
   ghc-options:
-    -j -Wall -fno-warn-unused-do-bind -fno-warn-orphans -funbox-strict-fields -threaded -rtsopts -with-rtsopts=-N
+    -Wall -fno-warn-unused-do-bind -fno-warn-orphans -funbox-strict-fields -threaded -rtsopts -with-rtsopts=-N
 
 library
   hs-source-dirs:
@@ -83,19 +126,18 @@ library
     Jinja.Program.Parser
     Jinja.Program.Fun
   build-depends:
-    base           == 4.*,
-    ansi-wl-pprint >= 0.6 && < 0.7,
-    array          == 0.5.*,
-    containers     >= 0.5 && < 0.6,
-    fgl            == 5.5.*,
-    graphviz       >= 2999.16,
-    mtl            >= 2.1 && <= 2.3,
-    parsec         == 3.1.*,
-    safe           == 0.3.*,
-    set-monad      == 0.2.*,
-    text           == 1.2.*,
-
-    term-rewriting == 0.*
+    base >= 4.7 && <5,
+    ansi-wl-pprint,
+    array,
+    containers,
+    fgl,
+    graphviz,
+    mtl,
+    parsec,
+    safe,
+    set-monad,
+    text,
+    term-rewriting
 
   ghc-options:
-    -j -Wall -fno-warn-unused-do-bind -fno-warn-orphans -funbox-strict-fields -rtsopts -with-rtsopts=-N
+    -Wall -fno-warn-unused-do-bind -fno-warn-orphans -funbox-strict-fields
